Fix for RomExists not making it to client.